@@ -9,9 +9,10 @@
   "license": "MIT",
   "main": "Gulpfile.js",
   "scripts": {
-    "start": "./node_modules/.bin/gulp watch --mkdocs --no-lint --no-revision",
     "build": "./node_modules/.bin/gulp build --clean",
-    "clean": "./node_modules/.bin/gulp clean"
+    "clean": "./node_modules/.bin/gulp clean",
+    "start": "./node_modules/.bin/gulp watch --mkdocs --no-lint --no-revision",
+    "pre-commit": "./node_modules/.bin/gulp assets:lint"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "css-mqpacker": "^4.0.0",
     "del": "^2.2.0",
     "eslint": "^3.6.1",
+    "git-hooks": "^1.1.6",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
